# jeeva_agentic

./: .gitignore  CONNECTION_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SETUP.md  UUID_FIX_SUMMARY.md  chatbot.db-journal  docker-compose.yml  pyproject.toml  requirements.txt  tech.md
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: chat.py  history.py
app/core/: config.py  exceptions.py  logging.py
app/database/: adapter.py  connection.py  queries.py
app/database/migrations/: 001_initial_schema.sql  001_initial_schema_sqlite.sql  002_add_indexes.sql
app/models/: database.py  schemas.py
app/services/: __init__.py
app/services/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
app/services/cache/: adapter.py
app/services/llm/: __init__.py  claude.py
app/services/memory/: __init__.py  checkpointer.py  thread_manager.py
app/utils/: persona_detector.py  validators.py
docker/: Dockerfile
docker/postgres/: init.sql
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  WelcomeMessage.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/types/: index.ts
scripts/: init_db.py  run_migrations.py  seed_data.py
tests/: conftest.py
tests/test_api/: test_chat.py  test_history.py
tests/test_integration/: test_persona_switching.py
tests/test_services/: test_agent.py  test_thread_manager.py
